Adapt pre-commit command

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,4 +10,4 @@ repos:
       files: \.ipynb$
       stages: [commit]
       language: system
-      entry: jupyter nbconvert --ClearOutputPreprocessor.enabled=True --inplace
+      entry: jupyter nbconvert --clear-output --inplace
