Fix conda CI setup

--- a/.github/workflows/ci-conda.yml
+++ b/.github/workflows/ci-conda.yml
@@ -15,5 +15,6 @@ jobs:
           environment-file: environment.yaml
           init-shell: bash
       - name: Run notebooks
+        shell: bash -el {0}
         run: |
           jupyter nbconvert --execute --to html notebooks/*.ipynb
