--- a/.github/workflows/ci-conda.yml
+++ b/.github/workflows/ci-conda.yml
@@ -14,6 +14,9 @@ jobs:
           micromamba-version: '1.3.1-0'
           environment-file: environment.yaml
           init-shell: bash
+      - name: Run check
+        run: |
+          python check-setup.py
       - name: Run notebooks
         shell: bash -el {0}
         run: |
