--- a/.github/workflows/ci-conda.yml
+++ b/.github/workflows/ci-conda.yml
@@ -16,7 +16,7 @@ jobs:
           init-shell: bash
       - name: Run check
         run: |
-          python check-setup.py
+          python check-setup.py --strict
       - name: Run notebooks
         shell: bash -el {0}
         run: |
