--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           pip install -r requirements.txt
       - name: Run check
         run: |
-          python check-setup.py
+          python check-setup.py --strict
       - name: Run notebooks
         run: |
           jupyter nbconvert --execute --to html notebooks/*.ipynb
