--- a/.github/workflows/ci-conda.yml
+++ b/.github/workflows/ci-conda.yml
@@ -15,6 +15,7 @@ jobs:
           environment-file: environment.yaml
           init-shell: bash
       - name: Run check
+        shell: bash -el {0}
         run: |
           python check-setup.py --strict
       - name: Run notebooks
