Fix rendered notebooks folder copy

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -26,7 +26,7 @@ jobs:
           jupyter nbconvert --output-dir='./page' --execute --to markdown notebooks/*.ipynb
           cp -r ./page ~/tmp
           git checkout gh-pages
-          cp -r ~/tmp ./notebooks-rendered
+          cp -r ~/tmp/* ./notebooks-rendered
           git clean -fdx
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4.16.0
