--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -23,11 +23,9 @@ jobs:
           pip install -r requirements.txt
       - name: Run notebooks and copy to temp
         run: |
-          jupyter nbconvert --output-dir='./page' --execute --to markdown notebooks/*.ipynb
-          cp -r ./page ~/tmp
+          jupyter nbconvert --output-dir='~/tmp' --execute --to markdown notebooks/*.ipynb
           git checkout gh-pages
           cp -r ~/tmp/* ./notebooks-rendered
-          git clean -fdx
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4.16.0
         if: success()
